--- a/PayMe/PayMe/Views/Shared/_LayoutLogin.cshtml
+++ b/PayMe/PayMe/Views/Shared/_LayoutLogin.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lumino - Login</title>
+    <title>PayMe - Login</title>
     <link href="Content/bootstrap.min.css" rel="stylesheet">
     <link href="Content/datepicker3.css" rel="stylesheet">
     <link href="Content/styles.css" rel="stylesheet">
