--- a/PayMe/PayMe/Views/Home/Index.cshtml
+++ b/PayMe/PayMe/Views/Home/Index.cshtml
@@ -1,55 +1,23 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "PayMe - Login";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+
+<div id="jqxgridMetricTaskMapping">
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-    </div>
-    <div>
-        <input type="button" value="Button" id='jqxButton' />
-    </div>
-    <div id='jqxWidget' style='font-family: Verdana Arial; font-size: 12px; width: 400px;'>
-        <h3>
-            House Contract
-        </h3>
-        <div style='margin-top: 10px;' id='jqxRadioButton'>
-            12 Months Contract
-        </div>
-        <div style='margin-top: 10px;' id='jqxRadioButton2'>
-            <span>6 Months Contract</span>
-        </div>
-        <div style='margin-top: 10px;' id='jqxRadioButton3'>
-            <span>3 Months Contract</span>
-        </div>
-        <div style='margin-top: 10px;' id='jqxRadioButton4'>
-            <span>1 Month Contract</span>
-        </div>
-        <div style='margin-top: 10px;'>
-            <div>
-                Events:
-            </div>
-            <div id='events'>
-            </div>
-        </div>
-    </div>
-</div>
-
+@*<script src="~/Scripts/jquery-2.0.3.min.js"></script>
+<script src="~/Scripts/jquery-ui-1.10.3.js"></script>
+<script type="text/javascript" src="~/Scripts/jqwidgets4.1.0/jqxcore.js"></script>
+<script type="text/javascript" src="~/Scripts/jqwidgets4.1.0/jqxdata.js"></script>
+<script type="text/javascript" src="~/Scripts/jqwidgets4.1.0/jqxbuttons.js"></script>*@
 <script type="text/javascript">
-    $(document).ready(function ()
-    {
-        // Create jqxButton widgets.
-        $("#jqxButton").jqxButton({ width: 120, height: 40 });
-        $("#jqxRadioButton").jqxRadioButton({ width: 250, height: 25, checked: true });
-        $("#jqxRadioButton2").jqxRadioButton({ width: 250, height: 25 });
-        $("#jqxRadioButton3").jqxRadioButton({ width: 250, height: 25 });
-        $("#jqxRadioButton4").jqxRadioButton({ width: 250, height: 25, disabled: true });
-    })
-
+    $(document).ready(function () {
+        $("#myButton").jqxButton(
+       { width: '120px', height: '35px', theme: 'darkblue' }
+       );
+    });
 </script>
+<input type="button" value="Click Me" id='myButton' />
+
