--- a/PayMe/PayMe/Views/Login/Index.cshtml
+++ b/PayMe/PayMe/Views/Login/Index.cshtml
@@ -1,78 +1,56 @@
-﻿
+﻿@model Business.LoginViewModel
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "PayMe - Login";
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
-<h2>Index</h2>
 
-
-<script type="text/javascript" src="~/Scripts/jquery-1.11.1.min.js"></script>
-<script type="text/javascript" src="~/Scripts/jqwidgets4.1.0/jqxcore.js"></script>
-<script type="text/javascript" src="~/Scripts/jqwidgets4.1.0/jqxbuttons.js"></script>
-<script type="text/javascript" src="~/Scripts/jqwidgets4.1.0/jqxradiobutton.js"></script>
-<script type="text/javascript">
-    $(document).ready(function ()
-    {
-        // Create jqxButton widgets.
-        $("#jqxButton").jqxButton({ width: 120, height: 40 });
-        $("#jqxRadioButton").jqxRadioButton({ width: 250, height: 25, checked: true });
-        $("#jqxRadioButton2").jqxRadioButton({ width: 250, height: 25 });
-        $("#jqxRadioButton3").jqxRadioButton({ width: 250, height: 25 });
-        $("#jqxRadioButton4").jqxRadioButton({ width: 250, height: 25, disabled: true });
-    })
-
-</script>
-
-<!DOCTYPE html>
-
-
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pay Me - Login</title>
-    <link href="/Content/bootstrap.min.css" rel="stylesheet">
-    <link href="/Content/datepicker3.css" rel="stylesheet">
-    <link href="/Content/styles.css" rel="stylesheet">
-    <!--[if lt IE 9]>
-    <script src="js/html5shiv.js"></script>
-    <script src="js/respond.min.js"></script>
-    <![endif]-->
-</head>
-<body>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
+            @if (ViewBag.errormessage != null)
+            {
+                <p class="alert alert-danger" id="successMessage">@ViewBag.errormessage</p>
+            }
             <div class="login-panel panel panel-default">
                 <div class="panel-heading">Log in</div>
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="panel-body">
                     <form role="form">
                         <fieldset>
                             <div class="form-group">
-                                <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus="">
+                                @Html.LabelFor(model => model.Username)
+                                @Html.TextBoxFor(model => model.Username, new { @class = "form-control", @maxlength = 20 })
+                                @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
                             </div>
                             <div class="form-group">
-                                <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                                @Html.LabelFor(model => model.Password)
+                                @Html.PasswordFor(model => model.Password, new { @class = "form-control", @maxlength = 30 })
+                                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                             </div>
                             <div class="checkbox">
                                 <label>
                                     <input name="remember" type="checkbox" value="Remember Me">Remember Me
                                 </label>
                             </div>
-                            <a href="~/home/index" class="btn btn-primary">Login</a>
+                            <div class="form-group">
+                                <div class="col-md-offset-0 col-md-10">
+                                    <input id="Submit1"  class="btn btn-primary" type="submit" value="Sign In">
+                                </div>
+
+                            </div>
                         </fieldset>
                     </form>
                 </div>
             </div>
-        </div><!-- /.col-->
+        </div>
         
     </div><!-- /.row -->
-    
+}
 
-    <script src="/Scripts/jquery-1.11.1.min.js"></script>
-    <script src="/Scripts/bootstrap.min.js"></script>
-</body>
-</html>
+
+
 
 
