--- a/PayMe/PayMe/Views/Home/Index.cshtml
+++ b/PayMe/PayMe/Views/Home/Index.cshtml
@@ -4,20 +4,96 @@
 }
 
 
-<div id="jqxgridMetricTaskMapping">
-</div>
 
-@*<script src="~/Scripts/jquery-2.0.3.min.js"></script>
-<script src="~/Scripts/jquery-ui-1.10.3.js"></script>
-<script type="text/javascript" src="~/Scripts/jqwidgets4.1.0/jqxcore.js"></script>
-<script type="text/javascript" src="~/Scripts/jqwidgets4.1.0/jqxdata.js"></script>
-<script type="text/javascript" src="~/Scripts/jqwidgets4.1.0/jqxbuttons.js"></script>*@
-<script type="text/javascript">
-    $(document).ready(function () {
-        $("#myButton").jqxButton(
-       { width: '120px', height: '35px', theme: 'darkblue' }
-       );
-    });
-</script>
-<input type="button" value="Click Me" id='myButton' />
+<div class="row">
+    <ol class="breadcrumb">
+        <li>
+            <a href="#">
+                <em class="fa fa-home"></em>
+            </a>
+        </li>
+        <li class="active">Dashboard</li>
+    </ol>
+</div><!--/.row-->
+
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">Dashboard</h1>
+    </div>
+</div><!--/.row-->
+    <div class="panel panel-container">
+        <div class="row">
+            <div class="col-xs-6 col-md-3 col-lg-3 no-padding">
+                <div class="panel panel-teal panel-widget border-right">
+                    <div class="row no-padding">
+                        <em class="fa fa-xl fa-shopping-cart color-blue"></em>
+                        <div class="large">120</div>
+                        <div class="text-muted">New Orders</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-6 col-md-3 col-lg-3 no-padding">
+                <div class="panel panel-blue panel-widget border-right">
+                    <div class="row no-padding">
+                        <em class="fa fa-xl fa-comments color-orange"></em>
+                        <div class="large">52</div>
+                        <div class="text-muted">Comments</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-6 col-md-3 col-lg-3 no-padding">
+                <div class="panel panel-orange panel-widget border-right">
+                    <div class="row no-padding">
+                        <em class="fa fa-xl fa-users color-teal"></em>
+                        <div class="large">24</div>
+                        <div class="text-muted">New Users</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-6 col-md-3 col-lg-3 no-padding">
+                <div class="panel panel-red panel-widget ">
+                    <div class="row no-padding">
+                        <em class="fa fa-xl fa-search color-red"></em>
+                        <div class="large">25.2k</div>
+                        <div class="text-muted">Page Views</div>
+                    </div>
+                </div>
+            </div>
+        </div><!--/.row-->
+    </div>
+
+    <div class="row">
+        <div class="col-xs-6 col-md-3">
+            <div class="panel panel-default">
+                <div class="panel-body easypiechart-panel">
+                    <h4>New Orders</h4>
+                    <div class="easypiechart" id="easypiechart-blue" data-percent="92"><span class="percent">92%</span></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-6 col-md-3">
+            <div class="panel panel-default">
+                <div class="panel-body easypiechart-panel">
+                    <h4>Comments</h4>
+                    <div class="easypiechart" id="easypiechart-orange" data-percent="65"><span class="percent">65%</span></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-6 col-md-3">
+            <div class="panel panel-default">
+                <div class="panel-body easypiechart-panel">
+                    <h4>New Users</h4>
+                    <div class="easypiechart" id="easypiechart-teal" data-percent="56"><span class="percent">56%</span></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-6 col-md-3">
+            <div class="panel panel-default">
+                <div class="panel-body easypiechart-panel">
+                    <h4>Visitors</h4>
+                    <div class="easypiechart" id="easypiechart-red" data-percent="27"><span class="percent">27%</span></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
