--- a/PayMe/PayMe/Views/Login/Index.cshtml
+++ b/PayMe/PayMe/Views/Login/Index.cshtml
@@ -15,7 +15,7 @@
                 <p class="alert alert-danger" id="successMessage">@ViewBag.errormessage</p>
             }
             <div class="login-panel panel panel-default">
-                <div class="panel-heading">Log in</div>
+                <div class="panel-heading">Log in:</div>
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="panel-body">
                     <form role="form">
