--- a/PayMe/PayMe/Views/Employee/Index.cshtml
+++ b/PayMe/PayMe/Views/Employee/Index.cshtml
@@ -20,7 +20,7 @@
         
         debugger;
       
-        var url = "/Employee/GetUserList";
+        var url = "../Employee/GetUserList";
         var data =
         {
             datatype: "json",
@@ -84,7 +84,7 @@
     </ol>
 </div><!--/.row-->
 
-<div style="float:right"><a href="~/Employee/Register" class="btn btn-primary btn-lg">Register</a></div>
+<div style="float:right;margin-right: 84px;"><a href="~/Employee/Register" class="btn btn-primary btn-lg">Register</a></div>
 
 <div id="jqxgridEmployee">
 </div>
