--- a/PayMe/PayMe/Views/Employee/Register.cshtml
+++ b/PayMe/PayMe/Views/Employee/Register.cshtml
@@ -161,7 +161,7 @@
                         <div class="col-lg-4">
 
                             <input type="submit" value="Create User" class="btn btn-primary btn-lg" />
-                            @Html.ActionLink("Cancel", "Registration", "Registration", null, new { @class = "btn btn-primary btn-lg" })
+                            @Html.ActionLink("Cancel", "Employee", "Register", null, new { @class = "btn btn-primary btn-lg" })
 
 
 
