--- a/PayMe/PayMe/Views/Shared/_Layout.cshtml
+++ b/PayMe/PayMe/Views/Shared/_Layout.cshtml
@@ -7,6 +7,17 @@
     @Styles.Render("~/Content/css")
    
     @*@Scripts.Render("~/bundles/modernizr")*@
+    <link href="~/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/css/font-awesome.min.css" rel="stylesheet">
+    <link href="~/css/datepicker3.css" rel="stylesheet">
+    <link href="~/css/styles.css" rel="stylesheet">
+
+    <!--Custom Font-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+    <script src="js/respond.min.js"></script>
+    <![endif]-->
 
     <script src="~/Scripts/jquery-1.11.1.min.js"></script>
     <link rel="stylesheet" href="~/scripts/jqwidgets4.1.0/styles/jqx.base.css" type="text/css" />
@@ -69,17 +80,7 @@
     <script src="~/Scripts/easypiechart-data.js"></script>
     <script src="~/Scripts/bootstrap-datepicker.js"></script>
     <script src="~/Scripts/custom.js"></script>
-    <script>
-		window.onload = function () {
-	var chart1 = document.getElementById("line-chart").getContext("2d");
-	window.myLine = new Chart(chart1).Line(lineChartData, {
-	responsive: true,
-	scaleLineColor: "rgba(0,0,0,.2)",
-	scaleGridLineColor: "rgba(0,0,0,.05)",
-	scaleFontColor: "#c5c7cc"
-	});
-};
-    </script>
+ 
 
 
 
@@ -88,7 +89,7 @@
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#sidebar-collapse">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#sidebar-collapse" aria-expanded="true">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -191,14 +192,14 @@
             </div>
         </form>
         <ul class="nav menu">
-            <li class="active"><a href="index.html"><em class="fa fa-dashboard">&nbsp;</em> Dashboard</a></li>
+            <li class="active"><a href="~/Home/Index"><em class="fa fa-dashboard">&nbsp;</em> Dashboard</a></li>
             <li><a href="~/Employee/Index"><em class="fa fa-calendar">&nbsp;</em> Employees</a></li>
-            <li><a href="charts.html"><em class="fa fa-bar-chart">&nbsp;</em> Charts</a></li>
-            <li><a href="elements.html"><em class="fa fa-toggle-off">&nbsp;</em> UI Elements</a></li>
-            <li><a href="panels.html"><em class="fa fa-clone">&nbsp;</em> Alerts &amp; Panels</a></li>
+            <li><a  href="#"><em class="fa fa-bar-chart">&nbsp;</em> Client</a></li>
+            <li><a  href="#"><em class="fa fa-toggle-off">&nbsp;</em> Project</a></li>
+            <li><a href="#"><em class="fa fa-clone">&nbsp;</em> Alerts &amp; Panels</a></li>
             <li class="parent ">
                 <a data-toggle="collapse" href="#sub-item-1">
-                    <em class="fa fa-navicon">&nbsp;</em> Multilevel <span data-toggle="collapse" href="#sub-item-1" class="icon pull-right"><em class="fa fa-plus"></em></span>
+                    <em class="fa fa-navicon">&nbsp;</em> Timesheet <span data-toggle="collapse" href="#sub-item-1" class="icon pull-right"><em class="fa fa-plus"></em></span>
                 </a>
                 <ul class="children collapse" id="sub-item-1">
                     <li>
@@ -218,19 +219,16 @@
                     </li>
                 </ul>
             </li>
-            <li><a href="/Login/Logout"><em class="fa fa-power-off">&nbsp;</em> Logout</a></li>
+            <li><a href="~/Login/Logout"><em class="fa fa-power-off">&nbsp;</em> Logout</a></li>
         </ul>
     </div><!--/.sidebar-->
 
   
     <div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
        
-
-
-
-
-    </div>
-    <div class="container body-content">
+        <div class="container body-content">
+           
+        </div>
 
         <script src="~/Scripts/jquery.validate.min.js"></script>
         <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
@@ -239,7 +237,9 @@
         <footer>
             <p>&copy; @DateTime.Now.Year -Pay Me</p>
         </footer>
+
     </div>
+    
 
     @*@Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
