--- a/PayMe/PayMe/Views/Employee/Register.cshtml
+++ b/PayMe/PayMe/Views/Employee/Register.cshtml
@@ -160,8 +160,8 @@
                     <div class="row">
                         <div class="col-lg-4">
 
-                            <input type="submit" value="Create User" class="btn btn-primary btn-lg" />
-                            @Html.ActionLink("Cancel", "Employee", "Register", null, new { @class = "btn btn-primary btn-lg" })
+                            <input type="submit" value="Create User" class="btn btn-md btn-primary" />
+                            @Html.ActionLink("Cancel", "Register", "Employee", null, new { @class = "btn btn-md btn-primary" })
 
 
 
