--- a/PayMe/PayMe/Views/Shared/_Layout.cshtml
+++ b/PayMe/PayMe/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     <script src="js/respond.min.js"></script>
     <![endif]-->
 
-    <script src="~/Scripts/jquery-1.11.1.min.js"></script>
+    @*<script src="~/Scripts/jquery-1.11.1.min.js"></script>
     <link rel="stylesheet" href="~/scripts/jqwidgets4.1.0/styles/jqx.base.css" type="text/css" />
     <link rel="stylesheet" href="~/scripts/jqwidgets4.1.0/styles/jqx.classic.css" type="text/css" />
     <script type="text/javascript" src="~/Scripts/jqwidgets4.1.0/jqxcore.js"></script>
@@ -79,7 +79,7 @@
     <script src="~/Scripts/easypiechart.js"></script>
     <script src="~/Scripts/easypiechart-data.js"></script>
     <script src="~/Scripts/bootstrap-datepicker.js"></script>
-    <script src="~/Scripts/custom.js"></script>
+    <script src="~/Scripts/custom.js"></script>*@
  
 
 
@@ -229,9 +229,18 @@
         <div class="container body-content">
            
         </div>
-
+        <script src="~/js/jquery-1.11.1.min.js"></script>
         <script src="~/Scripts/jquery.validate.min.js"></script>
         <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    
+        <script src="~/js/bootstrap.min.js"></script>
+        <script src="~/js/chart.min.js"></script>
+        <script src="~/js/chart-data.js"></script>
+        <script src="~/js/easypiechart.js"></script>
+        <script src="~/js/easypiechart-data.js"></script>
+        <script src="~/js/bootstrap-datepicker.js"></script>
+        <script src="~/js/bootstrap-table.js"></script>
+        <script src="~/js/custom.js"></script>
         @RenderBody()
         <hr />
         <footer>
