--- a/PayMe/PayMe/Views/Client/Index.cshtml
+++ b/PayMe/PayMe/Views/Client/Index.cshtml
@@ -7,9 +7,9 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
+<div style="float:right;margin-right: 84px;"><a href="~/Client/Create" class="btn btn-primary btn-lg">Create</a></div>
+
 <table class="table">
     <tr>
         <th>
