--- a/PayMe/PayMe/Views/Shared/_Layout.cshtml
+++ b/PayMe/PayMe/Views/Shared/_Layout.cshtml
@@ -194,7 +194,7 @@
         <ul class="nav menu">
             <li class="active"><a href="~/Home/Index"><em class="fa fa-dashboard">&nbsp;</em> Dashboard</a></li>
             <li><a href="~/Employee/Index"><em class="fa fa-calendar">&nbsp;</em> Employees</a></li>
-            <li><a  href="#"><em class="fa fa-bar-chart">&nbsp;</em> Client</a></li>
+            <li><a  href="~/Client/Index"><em class="fa fa-bar-chart">&nbsp;</em> Client</a></li>
             <li><a  href="#"><em class="fa fa-toggle-off">&nbsp;</em> Project</a></li>
             <li><a href="#"><em class="fa fa-clone">&nbsp;</em> Alerts &amp; Panels</a></li>
             <li class="parent ">
