--- a/PayMe/PayMe/Views/Shared/_Layout.cshtml
+++ b/PayMe/PayMe/Views/Shared/_Layout.cshtml
@@ -95,7 +95,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><span>Pay</span>&nbsp;Me</a>
+                <a class="navbar-brand" href="#"><span>MVC</span>&nbsp;TestProject</a>
                 <ul class="nav navbar-top-links navbar-right">
                     <li class="dropdown">
                         <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
@@ -229,7 +229,9 @@
         <div class="container body-content">
            
         </div>
-        <script src="~/js/jquery-1.11.1.min.js"></script>
+        <script src="~/js/jquery-3.3.1.min.js"></script>
+        @*<script src="~/js/jquery-1.11.1.min.js"></script>*@
+        <script src="~/js/tableExport.js"></script>
         <script src="~/Scripts/jquery.validate.min.js"></script>
         <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     
